<resources>
    <string name="app_name">Assignment1</string>
    <string name="title">Netmax Video Subscription</string>
    <string name="name">Name</string>
    <string name="plan">Choose Plan Type</string>
    <string name="standard">Standard</string>
    <string name="premium">Premium</string>
    <string name="addition">Addition</string>
    <string name="unli">Unlimited Movies</string>
    <string name="hd">HD</string>
    <string name="screen">Number of screen</string>
    <string-array name="screen_array">
        <item>1</item>
        <item>2</item>
        <item>4</item>
    </string-array>
    <string name="feature">Feature</string>
    <string-array name="standard_array">
        <item>None</item>
        <item>Multi-device Downloads</item>
        <item>Watch on Laptop</item>
    </string-array>
    <string-array name="premium_array">
        <item>None</item>
        <item>Ultra HD</item>
        <item>Priority Support</item>
    </string-array>
    <string name="province">Province</string>
    <string name="date">Date</string>
    <string name="submit">Submit</string>
</resources>